# wasmBuilder

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Template/: CMakeLists.txt
Template/src/: CMakeLists.txt  main.cpp
Template/www/: index.html
sdk/gtest/inc/gtest/: gmock-actions.h  gmock-port.h  gmock.h  gtest-death-test-internal.h  gtest-death-test.h  gtest-internal.h  gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-param-util.h  gtest-port.h  gtest-printers.h  gtest-string.h  gtest-test-part.h  gtest-typed-test.h  gtest.h
src/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  ErrorCodes.cpp  ErrorCodes.h  IBuilder.cpp  IBuilder.h  ILogger.h  IParser.h  IProject.h  LogWasmToConsole.cpp  LogWasmToConsole.h  Notify.cpp  Notify.h  WasmBuilder.cpp  WasmBuilder.h  WasmProject.cpp  WasmProject.h  color.h  main.cpp
tests/: ArgumentParserTest.cpp  CMakeLists.txt  main.cpp
